--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -1,10 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Admin DashBoard</title>
-</head>
-<body>
-<h1>trang admin</h1>
-</body>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <meta http-equiv="content-type" content="text/html" charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,minimum-scale=1.0"
+    />
+    <title>Home-ShopmeAdmin</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      th:href="@{/webjars/bootstrap/4.5.0/css/bootstrap.min.css}"
+    />
+    <script
+      type="text/javascript"
+      th:src="@{/webjars/jquery/jquery.min.js}"
+    ></script>
+    <script
+      type="text/javascript"
+      th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"
+    ></script>
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div>
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+          <a class="navbar-brand" th:href="@{/}">
+             <img th:src="@{/image/logostore.png}" alt="logo" />
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse ml-4" id="topNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link h7" th:href="@{/users}">Users</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link h7" th:href="@{/categories}">Categories</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link h7" th:href="@{/brands}">Brands</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link h7" th:href="@{/products}">Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link h7" th:href="@{/customers}">Customers</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link h7" th:href="@{/shipping}">Shipping</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link h7" th:href="@{/orders}">Orders</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link h7" th:href="@{/report}">Sale Report</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link h7" th:href="@{/articles}">Articles</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link h7" th:href="@{/menus}">Menus</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link h7" th:href="@{/settings}">Settings</a>
+              </li>
+
+            </ul>
+          </div>
+        </nav>
+      </div>
+      <div>
+        <h1>Welcome to shopme admin dashboard</h1>
+      </div>
+      <div>
+        <p>Shopme Control Panel - CopyRight &copy; Shopme</p>
+      </div>
+    </div>
+  </body>
+
+
 </html>
